<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivityDetails">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/active"
                android:textColor="@color/white"
                android:textSize="@dimen/_23ssp"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/materialButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="65dp"
                android:gravity="center"
                android:text="@string/first"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="6dp" />

            <TextView
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:gravity="center"
                android:text="@string/first"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:text="@string/first"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintTop_toBottomOf="@+id/id" />


            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/bg"
                android:text="@string/delete"
                android:textSize="@dimen/_18ssp"
                app:icon="@drawable/next"
                app:iconGravity="end"
                app:iconSize="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/approve" />

            <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/bg"
                android:text="@string/update"
                android:textSize="@dimen/_18ssp"
                app:icon="@drawable/next"
                app:iconGravity="end"
                app:iconSize="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/approve" />


            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/first"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintTop_toBottomOf="@+id/course" />

            <TextView
                android:id="@+id/approve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="end"
                android:text="@string/first"
                android:textColor="@color/blue"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/message"
                tools:layout_editor_absoluteX="13dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                app:layout_constraintTop_toBottomOf="@+id/update" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>